fix import and export inference bugs